Ignore SMTP auth config if username is blank
When loading or setting ActionMailer smtp configuration, don't set any
SMTP-AUTH parameters in ActionMailer the SMTP-AUTH username is blank

--- a/config/environments/production.rb.template
+++ b/config/environments/production.rb.template
@@ -129,10 +129,13 @@ Autolab3::Application.configure do
       address: config_hash['address'],
       port: config_hash['port'],
       enable_starttls_auto: config_hash['enable_starttls_auto'],
-      authentication: config_hash['plain'],
-      user_name: config_hash['user_name'],
-      password: config_hash['password']
     }
+
+    if config_hash.key?('username') && config_hash['username'].present?
+      smtp_settings[:authentication] = config_hash['authentication']
+      smtp_settings[:user_name] = config_hash['username']
+      smtp_settings[:password] = config_hash['password']
+    end
 
     if config_hash.key?('domain') && !config_hash['domain'].empty?
       smtp_settings[:domain] = config_hash['domain']
